fix(sidebar): enable overflow-y on note lists

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,7 @@
 }
 
 .right-section {
-  flex: 3.5;
+  flex: 4;
 
   .main-content {
     flex: 1;
